Fix: extra white space in home page

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .app__overlay {
